--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gapi": "^0.0.3",
     "js-cookie": "^3.0.5",
     "postcss": "^8.4.24",
+    "streamifier": "^0.1.1",
     "tailwindcss": "^3.3.2",
     "vue": "^2.6.14",
     "vue-router": "^3.5.3",
