--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "core-js": "^3.8.3",
     "gapi": "^0.0.3",
     "js-cookie": "^3.0.5",
+    "node-sass": "^9.0.0",
     "postcss": "^8.4.24",
+    "sass": "^1.69.5",
+    "sass-loader": "^13.3.2",
     "streamifier": "^0.1.1",
     "tailwindcss": "^3.3.2",
     "vue": "^2.6.14",
