adding product changes

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 DATABASE_URL=test
 BACK_END_URL=http://localhost:3001
 VUE_APP_CLIENT_ID=487527329078-sk90claiu1e0k007q6ruftad9lmvc0ot.apps.googleusercontent.com
+VUE_APP_IMAGE_DOMAIN=http://localhost:3001/images/products
